fix sdno-overlayvpn doesn't use the input uuid that create by sdno-nslcm
fix sdno-overlayvpn doesn't use the input uuid that create by sdno-nslcm

SDNO-831
